# c-vertices-sdk

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  Makefile.temp  README.md  library.json
.github/workflows/: all.yml  cmake.yml  docker.yml  tests.yml
config/: vertices_config.h
documentation/: account.md  porting.md
examples/esp-idf/: README.md
examples/esp32/: .gdbinit  .gitignore  CMakeLists.txt  README.md  esp-wroom-32-jlink.cfg  platformio.ini
examples/esp32/main/: CMakeLists.txt  component.mk  config.h  esp32_example.c  http_esp.c
examples/esp32/vertices_ports/: CMakeLists.txt  http_esp.c
examples/esp_http_client/: .gitignore  CMakeLists.txt  build_flags.txt  platformio.ini
examples/esp_http_client/main/: CMakeLists.txt  esp_http_client_example.c
examples/unix/: CMakeLists.txt  README.md  main.c
examples/unix/config/: unix_config.h  vertices_config.h  vertices_config.h.local  vertices_config.h.purestake  vertices_config.local.h  vertices_config.purestake.h
examples/unix/vertices_ports/: http_curl.c
examples/zephyr/: README.md
inc/: http.h  provider.h  tcp.h  transaction.h  vertices.h  vertices_config.h  vertices_errors.h  vertices_log.h  vertices_types.h
include/: vertices.h  vertices_config.h  vertices_errors.h  vertices_http.h  vertices_types.h
lib/: CMakeLists.txt  account.c  base32.c  base64.c  sha512_256.c  vertices.c  vertices_errors.c
lib/algorand/: algorand_provider.c  algorand_transaction.c
lib/config/: vertices_config.h
lib/http/: http_curl.c
lib/inc/: account.h  algorand.h  base32.h  base64.h  http.h  provider.h  transaction.h  vertices.h  vertices_errors.h  vertices_log.h
lib/providers/: algorand_provider.c
mdk/: compilers.h
src/: CMakeLists.txt  account.c  base32.c  base64.c  http_weak.c  sha512_256.c  vertices.c  vertices.cmake  vertices_errors.c
src/algorand/: algorand_parser.c  algorand_provider.c  algorand_transaction.c
src/http/: README.md  http_curl.c  http_esp.c
src/include/: account.h  algorand.h  base32.h  base64.h  compilers.h  http.h  mbedtls_config.h  parser.h  provider.h  sha512_256.h  transaction.h  vertices_log.h
src/providers/: algorand_provider.c
src/tcp/: README.md  tcp_unix.c
tests/: Makefile  MakefileWorkerOverrides.mk  README.md
tests/fakes/: fake_vertices_errors.c
tests/makefiles/: Makefile_base32.mk  Makefile_base64.mk  Makefile_sha512_256.mk
tests/src/: AllTests.cpp  test_base32.cpp  test_base64.cpp  test_sha512_256.cpp
utils/: Dockerfile  environment.yml  libs.cmake  str_to_bin.py  toolchain-esp32.cmake  utils.cmake
zephyr/: CMakeLists.txt  Kconfig  module.yml
